# SimConfig

./: .gitignore  CMakeLists.txt  configdialog.cpp  configdialog.h  configdialog.ui  configuration.cpp  configuration.h  datatemplate.cpp  datatemplate.h  dialogconfig.cpp  dialogconfig.h  dialogconfig.ui  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  tree.cpp  tree.h  tree.ui  util.cpp  util.h  viewer.cpp  viewer.h  viewer.ui
